@@ -1,3 +1,8 @@
+2004-11-08  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
+
+	* src/hidden3d.c (build_networks): Fix 'with impulses' drawing
+	style --- was off by one.
+
 2004-11-07  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/term.c (enhanced_recursion): Always allow backslash to escape the
